--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -20,7 +20,7 @@ Mac OS X Set Up
    python3 -m venv myvenv
    source myvenv/bin/activate
 
-4. Instal Django 1.7.7
+4. Install Django 1.7.7
    pip3 install django==1.7.7
        Collecting django==1.7.7
          Downloading Django-1.7.7-py2.py3-none-any.whl (7.4MB)
